2011-02-25 : releasing 2.5.7
2011-02-25 : fixed bug for dims of length one where bounds needed to be flliped, it used to raise an unwarranted error
2011-02-23 : releasing 2.5.6
2011-02-23 : got cmor_set_variable_attribute to actually do something and not raise error all the time, thx to Larry Solheim to spot this.
2011-02-23 : fixed issue when writing 1 time step at a time for climatological means, issue could led to seg fault and bad final file names, thx to Koji Ogochi to spot this one.
2011-02-16 : releasing 2.5.5
2011-02-16 : added process id to temporary file names so that code can be run via mpi
2011-02-02 : releasing 2.5.4
2011-02-02 : fixed a memory issue in the Python API for get_variable_attribute and has_variable_attribute
2011-01-31 : releasing 2.5.3
2011-01-25 : path produced w/o '/' or weird characters
2011-01-25 : cannot set global attribute if it is an attribute that can be set via cmor_dataset
2011-01-25 : cannot set var attribute after var has been created into nc file
2011-01-25 : cannot set var attribute if it is settable via cmor_variable
2011-01-25 : can handle "character type" singleton dimensions
2011-01-25 : does not stores units on character typevariables
2011-01-24 : cmor_axes, interval check cleanup errormessage, now specifies which units the diff calaculated is in.
2011-01-24 : updated cmor_set_variable_attrubtes to go thru an 'internal' one
2010-12-17 : when passing character type axes, checking output is suppposed to be character
2010-12-17 : fixed bug found by Jamie that didn't pass the correct args in get_var_Attribute
2010-12-16 : added two python test for var with string dimensions
2010-12-06 : turned off udunits2 warnings when reading database in
2010-11-18 : added a '/' after output path for tmp file testing
2010-11-12 : Updated documentation
2010-11-11 : updated pywrapper from Jamie
2010-11-11 : new examples into Makefile for Python
2010-11-11 : added a flag that says need to cal cmor_grid on some axis (site and location)